Retrieve state info by territory When a territory is clicked in the app, the state's info such as its name, time data or color are retrieved
