# src/server.py
@@ -12,7 +12,8 @@ from resources.Land import Land
 from dateutil.parser import parse
 import logging
 
-PRECISION_LEVELS = [float(prec) for prec in os.environ['PRECISION_LEVELS'].split(' ')]
+PRECISION_LEVELS = [float(prec)
+                    for prec in os.environ['PRECISION_LEVELS'].split(' ')]
 
 logging.basicConfig(level=logging.DEBUG)
 
@@ -24,28 +25,32 @@ CORS(app)
 # app.config['CORS_HEADERS'] = 'Content-Type'
 app.json_encoder = MapistoObjectsEncoder
 
-SWAGGER_URL = '/docs' # URL for exposing Swagger UI (without trailing '/')
-OPENAPI_PATH = '/static/openapi.yaml' # Our API url (can of course be a local resource)
+SWAGGER_URL = '/docs'  # URL for exposing Swagger UI (without trailing '/')
+# Our API url (can of course be a local resource)
+OPENAPI_PATH = '/static/openapi.yaml'
 API_DOC_URL = '/docs'
 # Call factory function to create our blueprint
 swaggerui_blueprint = get_swaggerui_blueprint(
-SWAGGER_URL, # Swagger UI static files will be mapped to '{SWAGGER_URL}/dist/'
-OPENAPI_PATH,
-config={ # Swagger UI config overrides
-    'app_name': "Mapisto"
+    # Swagger UI static files will be mapped to '{SWAGGER_URL}/dist/'
+    SWAGGER_URL,
+    OPENAPI_PATH,
+    config={  # Swagger UI config overrides
+        'app_name': "Mapisto"
     },
 )
 
 app.register_blueprint(swaggerui_blueprint, url_prefix=SWAGGER_URL)
 
+
 @app.route('/static/<path:path>')
 def send_static(path):
     return send_from_directory('static', path)
 
+
 @app.route('/map', methods=['GET'])
 def get_states():
     print('GET STATES')
-    try : 
+    try:
         date = parse(request.args.get('date'))
     except TypeError:
         raise BadRequest('date param not valid')
@@ -57,13 +62,14 @@ def get_states():
         bbmax_x=bbmax_x,
         bbmin_y=bbmin_y,
         bbmax_y=bbmax_y
-        ))
+    ))
     # res = jsonify(['youhou'])
     return res
 
+
 @app.route('/state', methods=['POST'])
 def post_state():
-    try :
+    try:
         validity_start = parse(request.args.get('validity_start'))
         validity_end = parse(request.args.get('validity_end'))
     except TypeError:
@@ -73,10 +79,12 @@ def post_state():
     logging.debug(state.territories[0])
     return str(datasource.add_state(state, validity_start, validity_end))
 
+
 @app.route('/land', methods=['POST'])
 def post_land():
-    land=Land.from_dict(request.json, PRECISION_LEVELS)
+    land = Land.from_dict(request.json, PRECISION_LEVELS)
     return jsonify(datasource.add_land(land))
+
 
 @app.route('/land', methods=['GET'])
 def get_land():
@@ -89,16 +97,27 @@ def get_land():
             bbmin_y=bbmin_y,
             bbmax_y=bbmax_y
         )
-        )
+    )
 
-@app.route('/', methods = ['GET'])
+
+@app.route('/state_from_territory/<territory_id>', methods=["GET"])
+def get_state_from_territory(territory_id):
+    try:
+        date = parse(request.args.get('date'))
+    except TypeError:
+        raise BadRequest('date param not valid')
+    return jsonify(datasource.get_state_from_territory(int(territory_id), date))
+
+
+@app.route('/', methods=['GET'])
 def redirectDoc():
     return redirect(API_DOC_URL)
 
+
 def extract_map_request():
-    precision=float(request.args.get('precision_in_km')),
-    bbmin_x=int(float(request.args.get('min_x'))),
-    bbmax_x=int(float(request.args.get('max_x'))),
-    bbmin_y=int(float(request.args.get('min_y'))),
-    bbmax_y=int(float(request.args.get('max_y')))
+    precision = float(request.args.get('precision_in_km')),
+    bbmin_x = int(float(request.args.get('min_x'))),
+    bbmax_x = int(float(request.args.get('max_x'))),
+    bbmin_y = int(float(request.args.get('min_y'))),
+    bbmax_y = int(float(request.args.get('max_y')))
     return (precision, bbmin_x, bbmax_x, bbmin_y, bbmax_y)
